Stops Campaign titles from being clipped

--- a/src/components/events/Event/style.scss
+++ b/src/components/events/Event/style.scss
@@ -93,8 +93,9 @@ $ehw-animation-speed: 200ms;
   position: absolute;
   overflow: hidden;
   font-size: 1.2em;
+  line-height: 1.3em;
   font-weight: bold;
-  height: 42px;
+  height: 2.6em;
   width: 80%;
   left: 10%;
   top: 67%;
